// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyPortalToastContainer matches snapshot 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="sc-dkzDqf cDpjbc"
    data-portal-slot="toast"
  >
    <div
      class="sc-bczRLJ jAZNhq"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ cWrNHg"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ loazPe"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`BodyPortalToastContainer uses inline prop 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="sc-dkzDqf iRjmjx"
    data-portal-slot="toast"
  >
    <div
      class="sc-bczRLJ jSNerL"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ fgCwHl"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="sc-bczRLJ dGEkoL"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer matches snapshot 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="sc-gsnTZi cA-dmZH"
    >
      <div
        class="sc-bczRLJ jAZNhq"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ cWrNHg"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ loazPe"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer uses inline prop 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="sc-gsnTZi ejWjjm"
    >
      <div
        class="sc-bczRLJ jSNerL"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ fgCwHl"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="sc-bczRLJ dGEkoL"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
